files/app_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: kuard
  namespace: mytest
  labels:
    app: kuard
spec:
  rules:
    - host: kuard.${MY_DOMAIN}
      http:
        paths:
          - backend:
              serviceName: kuard
              servicePort: 8080
            path: /
  tls:
    - hosts:
        - kuard.${MY_DOMAIN}
      secretName: ingress-cert-${LETSENCRYPT_ENVIRONMENT}
