files/argo-cd_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: argocd-server-http-ingress
  namespace: argocd-system
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: argocd-server
          servicePort: http
    host: argocd.${MY_DOMAIN}
  tls:
  - hosts:
    - argocd.${MY_DOMAIN}
    secretName: ingress-cert-${LETSENCRYPT_ENVIRONMENT}
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: argocd-server-grpc-ingress
  namespace: argocd-system
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: argocd-server
          servicePort: https
    host: argocd-grpc.${MY_DOMAIN}
  tls:
    - hosts:
        - argocd-grpc.${MY_DOMAIN}
      secretName: ingress-cert-${LETSENCRYPT_ENVIRONMENT}
